Aktualisieren von test.html

--- a/test.html
+++ b/test.html
@@ -42,8 +42,8 @@
 </head>
 
 <body>
-    <img class="slideshow" alt="Minions Slideshow">
-    <img class="slideshow" alt="Deadpool Slideshow">
+    <img class="slideshow" alt="Minions Slideshow" style="width: 40%;">
+    <img class="slideshow" alt="Deadpool Slideshow" style="width: 40%;">
     
     <script>
     var imagesMinions = ['i1.png', 'minions2.jpg', 'minions3.jpg', 'i4.jpg'];
