Aktualisieren von test.html

--- a/test.html
+++ b/test.html
@@ -56,12 +56,12 @@
 
     function changeImageMinions() {
     currentIndexMinions = (currentIndexMinions + 1) % imagesMinions.length;
-    imageElementsMinions.src = 'https://nunana.site/minions.html' + imagesMinions[currentIndexMinions];
+    imageElementsMinions.src = imagesMinions[currentIndexMinions];
 }
 
 function changeImageDeadpool() {
     currentIndexDeadpool = (currentIndexDeadpool + 1) % imagesDeadpool.length;
-    imageElementsDeadpool.src = 'https://nunana.site/deadpool.html' + imagesDeadpool[currentIndexDeadpool];
+    imageElementsDeadpool.src = imagesDeadpool[currentIndexDeadpool];
 }
 
     setInterval(changeImageMinions, 3000); // Ändert das Minions-Bild alle 3 Sekunden
