Aktualisieren von test.html

--- a/test.html
+++ b/test.html
@@ -42,8 +42,9 @@
 </head>
 
 <body>
-    <img class="slideshow" alt="Minions Slideshow" style="width: 40%;">
-    <img class="slideshow" alt="Deadpool Slideshow" style="width: 40%;">
+
+<img class="slideshow" alt="Minions Slideshow" style="width: 40%;" onclick="window.location.href = 'https://deine_weiterleitungs_domain_fuer_Minions';">
+<img class="slideshow" alt="Deadpool Slideshow" style="width: 40%;" onclick="window.location.href = 'https://deine_weiterleitungs_domain_fuer_Deadpool';">
     
     <script>
     var imagesMinions = ['i1.png', 'minions2.jpg', 'minions3.jpg', 'i4.jpg'];
