Aktualisieren von test.html

--- a/test.html
+++ b/test.html
@@ -43,8 +43,9 @@
 
 <body>
 
-<img class="slideshow" alt="Minions Slideshow" style="width: 40%;" onclick="window.location.href = 'https://deine_weiterleitungs_domain_fuer_Minions';">
-<img class="slideshow" alt="Deadpool Slideshow" style="width: 40%;" onclick="window.location.href = 'https://deine_weiterleitungs_domain_fuer_Deadpool';">
+<img class="slideshow" alt="Minions Slideshow" style="width: 40%;" onclick="window.location.href = 'https://123.vitaforas.de/minions.html';">
+
+<img class="slideshow" alt="Deadpool Slideshow" style="width: 40%;" onclick="window.location.href = 'https://123.vitaforas.de/deadpool.html';">
     
     <script>
     var imagesMinions = ['i1.png', 'minions2.jpg', 'minions3.jpg', 'i4.jpg'];
