--- a/test.html
+++ b/test.html
@@ -48,11 +48,11 @@
 <img class="slideshow" alt="Deadpool Slideshow" style="width: 40%;" onclick="window.location.href = 'https://nunana.site/deadpool.html';">
     
     <script>
-    var imagesMinions = ['i1.png', 'minions2.jpg', 'minions3.jpg', 'i4.jpg'];
+    var imagesMinions = ['i4.jpg', 'i1.png', 'minions2.jpg', 'minions3.jpg'];
     var currentIndexMinions = 0;
     var imageElementsMinions = document.getElementsByClassName("slideshow")[0];
 
-    var imagesDeadpool = ['https://123.vitaforas.de/p1.jpg', 'https://123.vitaforas.de/p2.jpg', 'https://123.vitaforas.de/d3.jpg'];
+    var imagesDeadpool = ['https://123.vitaforas.de/d3.jpg', 'https://123.vitaforas.de/p1.jpg', 'https://123.vitaforas.de/p2.jpg'];
     var currentIndexDeadpool = 0;
     var imageElementsDeadpool = document.getElementsByClassName("slideshow")[1];
 
