Aktualisieren von test.html

--- a/test.html
+++ b/test.html
@@ -48,7 +48,7 @@
 <img class="slideshow" alt="Deadpool Slideshow" style="width: 40%;" onclick="window.location.href = 'https://nunana.site/deadpool.html';">
     
     <script>
-    var imagesMinions = ['i4.jpg', 'i1.png', 'minions2.jpg', 'minions3.jpg'];
+    var imagesMinions = ['i4.jpg', 'i1.png', 'minions2.jpg', 'minions3.jpg', 'minions.jpg'];
     var currentIndexMinions = 0;
     var imageElementsMinions = document.getElementsByClassName("slideshow")[0];
 
