Aktualisieren von test.html

--- a/test.html
+++ b/test.html
@@ -52,7 +52,7 @@
     var currentIndexMinions = 0;
     var imageElementsMinions = document.getElementsByClassName("slideshow")[0];
 
-    var imagesDeadpool = ['https://123.vitaforas.de/d3.jpg', 'https://123.vitaforas.de/p1.jpg', 'https://123.vitaforas.de/p2.jpg', 'https://123.vitaforas.de/d3.jpg'];
+    var imagesDeadpool = ['https://123.vitaforas.de/p1.jpg', 'https://123.vitaforas.de/p1.jpg', 'https://123.vitaforas.de/p2.jpg', 'https://123.vitaforas.de/d3.jpg'];
     var currentIndexDeadpool = 0;
     var imageElementsDeadpool = document.getElementsByClassName("slideshow")[1];
 
