--- a/test.html
+++ b/test.html
@@ -21,15 +21,15 @@
 
 
 
-<body style="background-image: url('https://123.vitaforas.de/p1.jpg'); background-size: cover; text-align: center;">
+<body style="background-image: url('bac.jpg'); background-size: cover; text-align: center;">
 
 
 <link rel="image_src" href="background.jpg" />
 <meta property="og:image" content="background.jpg" />
 <meta property="og:description" content="deadpool" />
 <meta property="og:site_name" content="Official"/>
-<meta property="og:title" content="deadpool"/>
-<meta property="og:url" content="https://buy"/>
+<meta property="og:title" content="site"/>
+<meta property="og:url" content="https://watch"/>
 
 
     <style>
