Aktualisieren von test.html

--- a/test.html
+++ b/test.html
@@ -31,7 +31,6 @@
 <meta property="og:title" content="site"/>
 <meta property="og:url" content="https://watch"/>
 
-
     <style>
         body {
             background-image: url('background.jpg');
@@ -42,6 +41,10 @@
 </head>
 
 <body>
+
+
+<img src="StreamTV.png" alt="logo" width="85%" height="auto"><br>       
+
 
 <img class="slideshow" alt="Minions Slideshow" style="width: 40%;" onclick="window.location.href = 'https://nunana.site/minions.html';">
 
