--- a/video.html
+++ b/video.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <video autoplay loop>
-        <source src="video.webm" type="video/webm">
+        <source src="video.mp4" type="video/mp4">
     </video>
 </body>
 </html>
