Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ Klick Hier
 <p>
 <img src="unten.png"> 
 </p>
-                                                                                                                                         </div>
+                                                                                                                                </div>
                                                 </div>
                                                 <nav>
                                                         <ul>
@@ -81,10 +81,14 @@ JUST👇🏼NEW!
 <img src="Borderlands.jpg" alt="borderlands" width="100%" height="auto" name="Borderlands"></a>
 
 
+<p>         
+</p>   
+ <a href="https://nunana.site/video.html">
+<img src="Borderlands.jpg" alt="lands" width="100%" height="auto" name="lands"></a>
 
 <p>         
 </p>   
-
+         
 
         
    
