--- a/test2.html
+++ b/test2.html
@@ -54,7 +54,7 @@
 <img class="slideshow" alt="Minions Slideshow" style="width: 40%;" onclick="window.location.href = 'https://nunana.site/minions.html';">
 <img class="slideshow" alt="Deadpool Slideshow" style="width: 40%;" onclick="window.location.href = 'https://nunana.site/deadpool.html';">
 
-<img class="slideshow" alt="Spiderman Slideshow" style="width: 40%;" onclick="window.location.href = 'https://nunana.site/spiderman.html';">
+<img class="slideshow" alt="Spiderman Slideshow" style="width: 40%;" onclick="window.location.href = 'https://nunana.site/mazerunner.html';">
 <img class="slideshow" alt="Batman Slideshow" style="width: 40%;" onclick="window.location.href = 'https://nunana.site/batman.html';">
 
 <script>
