Aktualisieren von mazerunner.html

--- a/mazerunner.html
+++ b/mazerunner.html
@@ -34,7 +34,7 @@
 
     <style>
         body {
-            background-image: url('background.jpg');
+            background-image: url('bac.jpg');
             background-size: cover;
             text-align: center;
         }
