--- a/mazerunner.html
+++ b/mazerunner.html
@@ -21,7 +21,7 @@
 
 
 
-<body style="background-image: url('https://123.vitaforas.de/p1.jpg'); background-size: cover; text-align: center;">
+<body style="background-image: url('bac.jpg'); background-size: cover; text-align: center;">
 
 
 <link rel="image_src" href="background.jpg" />
