Aktualisieren von mazerunner.html

--- a/mazerunner.html
+++ b/mazerunner.html
@@ -60,7 +60,7 @@
 <img src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/maze2.jpg" alt="1" width="30%" height="auto"></a>
 
 <a href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/maze3&#46;&#109;&#112;&#52;">
-<img src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/maze3.jpg" alt="26" width="30%" height="auto"></a>
+<img src="maze3.jpg" alt="26" width="30%" height="auto"></a>
 
  <p> </p>
 
@@ -85,7 +85,7 @@ Thomas und seine Mitstreiter sind dem Labyrinth entkommen und stellen mit Schrec
 </p>
 
 <li><a href="https://123.vitaforas.de/maze3.mp4"> 
-<img src="https://123.vitaforas.de/maze3.jpg" alt="7" width="100%" height="auto"></a>
+<img src="maze3.jpg" alt="7" width="100%" height="auto"></a>
 
 Nachdem Thomas dem Labyrinth entkommen ist und die Brandwüste durchquert hat, sind die Abenteuer für ihn und seine Freunde noch längst nicht ausgestanden. Ein Jahr ist vergangen. Inzwischen haben er, Newt, Minho und Teresa so einiges in Erfahrung gebracht. Sie wissen nun, dass sie Teil eines groß angelegten Experiments waren, mit dem die Organisation Wicked ein Heilmittel für die weltweit ausgebrochene Seuche namens "Der Brand" finden wollte, die Menschen in tollwütige Bestien verwandelt. Thomas gehört zu den wenigen Personen, die gegen den letztendlich tödlich endenden Virus immun sind, und so fällt es nun ihm zu, den Verfall der Menschheit aufzuhalten.
 
