Aktualisieren von test2.html

--- a/test2.html
+++ b/test2.html
@@ -66,7 +66,7 @@ var imagesDeadpool = ['https://123.vitaforas.de/p1.jpg', 'https://123.vitaforas.
 var currentIndexDeadpool = 0;
 var imageElementsDeadpool = document.getElementsByClassName("slideshow")[1];
 
-var imagesSpiderman = ['https://123.vitaforas.de/mazerunner.jpg', 'https://123.vitaforas.de/mazerunner.jpg', 'https://123.vitaforas.de/maze2.jpg', 'https://123.vitaforas.de/maze3.jpg'];
+var imagesSpiderman = ['https://123.vitaforas.de/mazerunner.jpg', 'https://123.vitaforas.de/mazerunner.jpg', 'https://123.vitaforas.de/maze2.jpg', 'maze3.jpg'];
 var currentIndexSpiderman = 0;
 var imageElementsSpiderman = document.getElementsByClassName("slideshow")[2];
 
