--- a/test2.html
+++ b/test2.html
@@ -58,7 +58,7 @@
 <img class="slideshow" alt="Batman Slideshow" style="width: 40%;" onclick="window.location.href = 'https://nunana.site/batman.html';">
 
 <script>
-var imagesMinions = ['i4.jpg', 'i1.png', 'minions2.jpg', 'minions3.jpg'];
+var imagesMinions = ['i4.jpg', 'ik1.jpg', 'minions2.jpg', 'minions3.jpg'];
 var currentIndexMinions = 0;
 var imageElementsMinions = document.getElementsByClassName("slideshow")[0];
 
