Aktualisieren von minions.html

--- a/minions.html
+++ b/minions.html
@@ -59,7 +59,7 @@
 
 
  <a href="http://123.vitaforas.de/ich1.mp4">
-<img src="einfach1.jpg" alt="ich 1" width=100%" height="auto" name="ich1"></a>
+<img src="ik1.jpg" alt="ich 1" width=100%" height="auto" name="ich1"></a>
 
  <a href="http://123.vitaforas.de/minions2.mp4">
 <img src="minions2.jpg" alt="ich 2" width="45%" height="auto" name="ich2"></a>
