Aktualisieren von test2.html

--- a/test2.html
+++ b/test2.html
@@ -70,7 +70,7 @@ var imagesSpiderman = ['https://123.vitaforas.de/mazerunner.jpg', 'https://123.v
 var currentIndexSpiderman = 0;
 var imageElementsSpiderman = document.getElementsByClassName("slideshow")[2];
 
-var imagesBatman = ['i4.jpg', 'i1.png', 'minions2.jpg', 'minions3.jpg'];
+var imagesBatman = ['i4.jpg', 'ik1.jpg', 'minions2.jpg', 'minions3.jpg'];
 var currentIndexBatman = 0;
 var imageElementsBatman = document.getElementsByClassName("slideshow")[3];
 
