--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ https://5927421.igen.app">
 <img class="slideshow" alt="Deadpool Slideshow" style="width: 45%;" onclick="window.location.href = 'https://nunana.site/deadpool.html';">
 
 <img class="slideshow" alt="Spiderman Slideshow" style="width: 45%;" onclick="window.location.href = 'https://nunana.site/mazerunner.html';">
-<img class="slideshow" alt="Batman Slideshow" style="width: 45%;" onclick="window.location.href = 'https://nunana.site/test2.html';">
+<img class="slideshow" alt="Batman Slideshow" style="width: 45%;" onclick="window.location.href = 'https://nunana.site/JohnWick.html';">
 
 <script>
 var imagesMinions = ['i4.jpg', 'ik1.jpg', 'minions2.jpg', 'minions3.jpg'];
@@ -151,7 +151,7 @@ var imagesSpiderman = ['https://123.vitaforas.de/mazerunner.jpg', 'https://123.v
 var currentIndexSpiderman = 0;
 var imageElementsSpiderman = document.getElementsByClassName("slideshow")[2];
 
-var imagesBatman = ['i4.jpg', 'ik1.jpg', 'minions2.jpg', 'minions3.jpg'];
+var imagesBatman = ['&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/John4.png', '&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/John1.png', '&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/John2.png', '&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/John3.jpg'];
 var currentIndexBatman = 0;
 var imageElementsBatman = document.getElementsByClassName("slideshow")[3];
 
