Aktualisieren von JohnWick.html

--- a/JohnWick.html
+++ b/JohnWick.html
@@ -49,9 +49,14 @@
 
 
 
-    <h1> John Wick </h1>
+    <h1>  </h1>
 
 
+
+
+<p> 
+<img src="StreamTV.png" alt="300" width="85%" height="auto">       
+</p>   
 
     
 
