Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -188,23 +188,6 @@ setInterval(changeImageBatman, 2000); // Ändert das Batman-Bild alle 2 Sekunden
 </p> 
 
 
-    <p>         </p>          <a href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/panda4&#46;&#109;&#112;&#52;">
-<img src="p4.jpg" alt="panda" width="100%" height="auto"></a>   
-<p>         
-</p>   
-
-<p>         
-</p>   
- <a href="https://123.vitaforas.de/ask2.mp4">
-<img src="https://123.vitaforas.de/ask2.jpg" alt="ask" width="100%" height="auto"></a>
-
-<p>          </p>  
-
-<p>         
-</p>   
- <a href="https://123.vitaforas.de/garf.mp4">
-<img src="https://123.vitaforas.de/garf.jpeg" alt="Garfield" width="100%" height="auto"></a>
-
 
 <p>          </p> 
 
@@ -1347,6 +1330,31 @@ video.play();
 Der siebenjährige William (Phoenix Laroche) bekommt zu Weihnachten ein neues Spielzeug geschenkt, einen kleinen Kuschelhasen. Nach kleineren Startschwierigkeiten wird das Plüschtier bald zu seinem Lieblingsspielgefährten, das ein Eigenleben entwickelt und dem Jungen eine faszinierende Welt voller Magie und Abenteuer eröffnet. Bei allem Spaß, den die beiden miteinander haben, wünscht das Häschen sich jedoch vor allem, ein echtes Tier zu sein.
 
 Trickfilmadaption des Kinderbuchklassikers „Das Samtkaninchen“ der britisch-amerikanischen Kinderbuchautorin Margery Williams.
+
+
+    <p>         </p>        
+
+  <a href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/panda4&#46;&#109;&#112;&#52;">
+<img src="p4.jpg" alt="panda" width="100%" height="auto"></a>   
+
+<p>         
+</p>   
+
+<p>         
+</p>   
+ <a href="https://123.vitaforas.de/ask2.mp4">
+<img src="https://123.vitaforas.de/ask2.jpg" alt="ask" width="100%" height="auto"></a>
+
+<p>         
+ </p>  
+
+
+<p>         
+</p>   
+
+ <a href="https://123.vitaforas.de/garf.mp4">
+<img src="https://123.vitaforas.de/garf.jpeg" alt="Garfield" width="100%" height="auto"></a>
+
  <p>         
 </p>
 
