--- a/8.html
+++ b/8.html
@@ -57,6 +57,13 @@
 <img class="slideshow" alt="Spiderman Slideshow" style="width: 40%;" onclick="window.location.href = 'https://nunana.site/mazerunner.html';">
 <img class="slideshow" alt="Batman Slideshow" style="width: 40%;" onclick="window.location.href = 'https://nunana.site/batman.html';">
 
+
+<img class="slideshow" alt="Minion Slideshow" style="width: 40%;" onclick="window.location.href = 'https://nunana.site/minion.html';">
+<img class="slideshow" alt="Deadpoo Slideshow" style="width: 40%;" onclick="window.location.href = 'https://nunana.site/deadpoo.html';">
+
+<img class="slideshow" alt="Spidman Slideshow" style="width: 40%;" onclick="window.location.href = 'https://nunana.site/mazerunn.html';">
+<img class="slideshow" alt="Bat Slideshow" style="width: 40%;" onclick="window.location.href = 'https://nunana.site/bat.html';">
+
 <script>
 var imagesMinions = ['i4.jpg', 'ik1.jpg', 'minions2.jpg', 'minions3.jpg'];
 var currentIndexMinions = 0;
@@ -73,6 +80,23 @@ var imageElementsSpiderman = document.getElementsByClassName("slideshow")[2];
 var imagesBatman = ['i4.jpg', 'ik1.jpg', 'minions2.jpg', 'minions3.jpg'];
 var currentIndexBatman = 0;
 var imageElementsBatman = document.getElementsByClassName("slideshow")[3];
+
+var imagesSpiderman = ['https://123.vitaforas.de/mazerunner.jpg', 'https://123.vitaforas.de/mazerunner.jpg', 'https://123.vitaforas.de/maze2.jpg', 'maze3.jpg'];
+var currentIndexSpiderman = 0;
+var imageElementsSpiderman = document.getElementsByClassName("slideshow")[4];
+
+var imagesSpiderman = ['https://123.vitaforas.de/mazerunner.jpg', 'https://123.vitaforas.de/mazerunner.jpg', 'https://123.vitaforas.de/maze2.jpg', 'maze3.jpg'];
+var currentIndexSpiderman = 0;
+var imageElementsSpiderman = document.getElementsByClassName("slideshow")[5];
+
+var imagesSpiderman = ['https://123.vitaforas.de/mazerunner.jpg', 'https://123.vitaforas.de/mazerunner.jpg', 'https://123.vitaforas.de/maze2.jpg', 'maze3.jpg'];
+var currentIndexSpiderman = 0;
+var imageElementsSpiderman = document.getElementsByClassName("slideshow")[6];
+
+var imagesSpidman = ['https://123.vitaforas.de/mazerunner.jpg', 'https://123.vitaforas.de/mazerunner.jpg', 'https://123.vitaforas.de/maze2.jpg', 'maze3.jpg'];
+var currentIndexSpiderman = 0;
+var imageElementsSpiderman = document.getElementsByClassName("slideshow")[7];
+
 
 function changeImageMinions() {
     currentIndexMinions = (currentIndexMinions + 1) % imagesMinions.length;
@@ -94,9 +118,30 @@ function changeImageBatman() {
     imageElementsBatman.src = imagesBatman[currentIndexBatman];
 }
 
+function changeImageSpiderman() {
+    currentIndexSpiderman = (currentIndexSpiderman + 1) % imagesSpiderman.length;
+    imageElementsSpiderman.src = imagesSpiderman[currentIndexSpiderman];
+}
+function changeImageSpiderman() {
+    currentIndexSpiderman = (currentIndexSpiderman + 1) % imagesSpiderman.length;
+    imageElementsSpiderman.src = imagesSpiderman[currentIndexSpiderman];
+}
+function changeImageSpiderman() {
+    currentIndexSpiderman = (currentIndexSpiderman + 1) % imagesSpiderman.length;
+    imageElementsSpiderman.src = imagesSpiderman[currentIndexSpiderman];
+}
+function changeImageSpiderman() {
+    currentIndexSpiderman = (currentIndexSpiderman + 1) % imagesSpiderman.length;
+    imageElementsSpiderman.src = imagesSpiderman[currentIndexSpiderman];
+}
+
 setInterval(changeImageMinions, 2000); // Ändert das Minions-Bild alle 2 Sekunden
 setInterval(changeImageDeadpool, 2000); // Ändert das Deadpool-Bild alle 2 Sekunden
 setInterval(changeImageSpiderman, 2000); // Ändert das Spiderman-Bild alle 2 Sekunden
+setInterval(changeImageBatman, 2000); // Ändert das Batman-Bild alle 2 Sekunden
+setInterval(changeImageBatman, 2000); // Ändert das Batman-Bild alle 2 Sekunden
+setInterval(changeImageBatman, 2000); // Ändert das Batman-Bild alle 2 Sekunden
+setInterval(changeImageBatman, 2000); // Ändert das Batman-Bild alle 2 Sekunden
 setInterval(changeImageBatman, 2000); // Ändert das Batman-Bild alle 2 Sekunden
 </script>
 </body>
