Aktualisieren von test6art.html

--- a/test6art.html
+++ b/test6art.html
@@ -127,5 +127,21 @@ setInterval(changeImageBatman, 2000); // Ändert das Batman-Bild alle 2 Sekunden
 setInterval(changeImageSpider, 2000); // Ändert das Spiderman-Bild alle 2 Sekunden
 setInterval(changeImageBat, 2000); // Ändert das Batman-Bild alle 2 Sekunden
 </script>
+
+
+<p>.
+</p>
+
+
+<p>.
+</p>
+
+
+<p>.
+</p>
+
+<img src="StreamTV.png" alt="logo" width="85%" height="auto"><br>       
+
+
 </body>
 </html>
