Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -189,7 +189,14 @@ setInterval(changeImageBatman, 2000); // Ändert das Batman-Bild alle 2 Sekunden
 <p>         
 </p> 
 
+<p>         
+</p>   
 
+<a href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/downUnder&#46;&#109;&#112;&#52;">
+<img src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/DownUnder.jpg" alt="1" width="100%" height="auto"></a>
+  
+<p>         
+</p>
 
 <p>          </p> 
 
